set (callback_SRCS
CallBack.cpp
)

IF(CMAKE_COMPILER_IS_GNUCC)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMOD_NAME=\"callback\"")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMOD_NAME='\"callback\"'")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

ADD_LIBRARY(callback SHARED ${callback_SRCS})
SET_TARGET_PROPERTIES(callback PROPERTIES OUTPUT_NAME "callback")
SET_TARGET_PROPERTIES(callback PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(callback ${CMAKE_DL_LIBS} pthread m)

