set (conference_SRCS
Conference.cpp
)

ADD_LIBRARY(conference SHARED ${conference_SRCS})
SET_TARGET_PROPERTIES(conference PROPERTIES OUTPUT_NAME "conference")
TARGET_LINK_LIBRARIES(conference ${CMAKE_DL_LIBS} pthread m)

IF(FLITE_FOUND AND ZRTP_FOUND)
	IF(CMAKE_COMPILER_IS_GNUCC)
		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${FLITE_INCLUDE_DIR}/flite")
	ENDIF(CMAKE_COMPILER_IS_GNUCC)

	IF(CMAKE_COMPILER_IS_GNUCXX)
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${FLITE_INCLUDE_DIR}/flite")
	ENDIF(CMAKE_COMPILER_IS_GNUCXX)
	ADD_DEFINITIONS(-DWITH_SAS_TTS)
	TARGET_LINK_LIBRARIES(conference ${CMAKE_DL_LIBS} flite_cmu_us_kal flite_usenglish flite_cmulex flite)
ENDIF(FLITE_FOUND AND ZRTP_FOUND)

IF(MYSQLPP_FOUND)
	IF(CMAKE_COMPILER_IS_GNUCC)
		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${MYSQLPP_INCLUDE_DIR}/mysql++ -I/usr/include/mysql")
	ENDIF(CMAKE_COMPILER_IS_GNUCC)

	IF(CMAKE_COMPILER_IS_GNUCXX)
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${MYSQLPP_INCLUDE_DIR}/mysql++ -I/usr/include/mysql")
	ENDIF(CMAKE_COMPILER_IS_GNUCXX)
	ADD_DEFINITIONS(-DUSE_MYSQL)
	TARGET_LINK_LIBRARIES(conference ${CMAKE_DL_LIBS} mysqlpp)
ENDIF(MYSQLPP_FOUND)
