set (conference_SRCS
Conference.cpp
)

ADD_LIBRARY(conference SHARED ${conference_SRCS})
TARGET_LINK_LIBRARIES(conference ${CMAKE_DL_LIBS})

IF(FLITE_FOUND AND ZRTP_FOUND)
	INCLUDE_DIRECTORIES(${FLITE_INCLUDE_DIR}/flite)
	ADD_DEFINITIONS(-DWITH_SAS_TTS)
	TARGET_LINK_LIBRARIES(conference ${CMAKE_DL_LIBS} flite_cmu_us_kal flite_usenglish flite_cmulex flite)
ENDIF(FLITE_FOUND AND ZRTP_FOUND)

IF(MYSQLPP_FOUND)
	INCLUDE_DIRECTORIES(/usr/include/mysql)
	INCLUDE_DIRECTORIES(${MYSQLPP_INCLUDE_DIR}/mysql++)
	ADD_DEFINITIONS(-DUSE_MYSQL)
	TARGET_LINK_LIBRARIES(conference ${CMAKE_DL_LIBS} mysqlpp)
ENDIF(MYSQLPP_FOUND)
