set (gateway_SRCS
GWSession.cpp
GatewayFactory.cpp
mISDNChannel.cpp
mISDNNames.cpp
mISDNStack.cpp
)

IF(CMAKE_COMPILER_IS_GNUCC)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGW_VERSION='\"0.1\"'")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGW_VERSION='\"0.1\"'")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

ADD_LIBRARY(gateway SHARED ${gateway_SRCS})
SET_TARGET_PROPERTIES(gateway PROPERTIES OUTPUT_NAME "gateway")
TARGET_LINK_LIBRARIES(gateway ${CMAKE_DL_LIBS} pthread m mISDN isdnnet)

