set (ivr_SRCS
Ivr.cpp
IvrAudio.cpp
IvrAudioMixIn.cpp
IvrDialogBase.cpp
IvrSipDialog.cpp
IvrSipReply.cpp
IvrSipRequest.cpp
IvrUAC.cpp
)

IF(CMAKE_COMPILER_IS_GNUCC)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${PYTHON_INCLUDE_PATH}")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${PYTHON_INCLUDE_PATH}")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

add_library(ivr SHARED ${ivr_SRCS})
set_target_properties(ivr PROPERTIES OUTPUT_NAME "ivr")
set_target_properties(ivr PROPERTIES PREFIX "")
target_link_libraries(ivr ${CMAKE_DL_LIBS} pthread m)

IF(FLITE_FOUND)
IF(CMAKE_COMPILER_IS_GNUCC)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DIVR_WITH_TTS -I${FLITE_INCLUDE_DIR}/flite")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DIVR_WITH_TTS -I${FLITE_INCLUDE_DIR}/flite")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
SET_TARGET_PROPERTIES(ivr PROPERTIES LINK_FLAGS "${LINK_FLAGS} -lflite_cmu_us_kal -lflite_usenglish -lflite_cmulex -lflite")
ENDIF(FLITE_FOUND)

