set (ivr_SRCS
Ivr.cpp
IvrAudio.cpp
IvrAudioMixIn.cpp
IvrDialogBase.cpp
IvrSipDialog.cpp
IvrSipReply.cpp
IvrSipRequest.cpp
IvrUAC.cpp
)

IF(CMAKE_COMPILER_IS_GNUCC)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${PYTHON_INCLUDE_PATH}")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${PYTHON_INCLUDE_PATH}")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

ADD_LIBRARY(ivr SHARED ${ivr_SRCS})
SET_TARGET_PROPERTIES(ivr PROPERTIES OUTPUT_NAME "ivr")
TARGET_LINK_LIBRARIES(ivr ${CMAKE_DL_LIBS} pthread m)

IF(FLITE_FOUND)
	IF(CMAKE_COMPILER_IS_GNUCC)
		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${FLITE_INCLUDE_DIR}/flite")
	ENDIF(CMAKE_COMPILER_IS_GNUCC)

	IF(CMAKE_COMPILER_IS_GNUCXX)
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${FLITE_INCLUDE_DIR}/flite")
	ENDIF(CMAKE_COMPILER_IS_GNUCXX)
	ADD_DEFINITIONS(-DIVR_WITH_TTS)
	TARGET_LINK_LIBRARIES(ivr ${CMAKE_DL_LIBS} flite_cmu_us_kal flite_usenglish flite_cmulex flite)
ENDIF(FLITE_FOUND)

