set (mp3_SRCS
mp3.c
)

#ifeq ($(WITH_MPG123DECODER), yes)
#	module_ldflags += -lmpg123
#	module_cflags += -DWITH_MPG123DECODER

ADD_LIBRARY(mp3 SHARED ${mp3_SRCS})
SET_TARGET_PROPERTIES(mp3 PROPERTIES OUTPUT_NAME "mp3")
SET_TARGET_PROPERTIES(mp3 PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(mp3 ${CMAKE_DL_LIBS} pthread m mp3lame)

