set (xmlrpc2di_SRCS
MultithreadXmlRpcServer.cpp
TOXmlRpcClient.cpp
XMLRPC2DI.cpp
)

ADD_SUBDIRECTORY (xmlrpc++)

INCLUDE_DIRECTORIES (xmlrpc++/src)

SET_PROPERTY(TARGET xmlrpcpp PROPERTY IMPORTED_LOCATION ./xmlrpc++/src/xmlrpcpp.a)

ADD_LIBRARY(xmlrpc2di SHARED ${xmlrpc2di_SRCS})
SET_TARGET_PROPERTIES(xmlrpc2di PROPERTIES OUTPUT_NAME "xmlrpc2di")
TARGET_LINK_LIBRARIES(xmlrpc2di ${CMAKE_DL_LIBS} pthread m xmlrpcpp)

IF(OPENSSL_FOUND)
	ADD_DEFINITIONS(-DHAVE_XMLRPCPP_SSL -DXMLRPCPP_SUPPORT_STRUCT_ACCESS)
	TARGET_LINK_LIBRARIES(xmlrpc2di ${CMAKE_DL_LIBS} ssl)
ENDIF(OPENSSL_FOUND)
