ADD_SUBDIRECTORY (adpcm)
ADD_SUBDIRECTORY (echo)
IF(SEMS_USE_SPANDSP)
	ADD_SUBDIRECTORY (g722)
ENDIF(SEMS_USE_SPANDSP)
#ADD_SUBDIRECTORY (g729)
IF(GSM_FOUND)
	ADD_SUBDIRECTORY (gsm)
ENDIF(GSM_FOUND)
IF(SEMS_USE_ILBC)
	ADD_SUBDIRECTORY (ilbc)
ENDIF(SEMS_USE_ILBC)
#ADD_SUBDIRECTORY (isac)
ADD_SUBDIRECTORY (l16)
ADD_SUBDIRECTORY (session_timer)
#ADD_SUBDIRECTORY (silk)
IF(SPEEX_FOUND)
	ADD_SUBDIRECTORY (speex)
ENDIF(SPEEX_FOUND)
ADD_SUBDIRECTORY (stats)
ADD_SUBDIRECTORY (uac_auth)
ADD_SUBDIRECTORY (wav)
